# ──────────────────────────────────────────────────────────────
# Project build configuration for ManipulaPy
# ──────────────────────────────────────────────────────────────

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# ------------------------------------------------------------------
[project]
name = "ManipulaPy"
version = "1.3.2.post1"
authors = [
    { name = "Mohamed Aboelnasr", email = "aboelnasr1997@gmail.com" },
]
description = "A comprehensive Python package for robotic manipulator analysis and control"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.9"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
]
keywords = [
    "robotics",
    "kinematics",
    "dynamics",
    "trajectory-planning",
    "simulation",
    "cuda",
    "computer-vision",
    "control-systems",
    "manipulator",
]

# ------------------------------------------------------------------
# Core dependencies — numerical/plotting only. Heavy and platform-specific
# deps (pybullet, torch, opencv, ultralytics, cupy, trimesh) live in
# optional groups so `pip install ManipulaPy` succeeds on minimal images
# and platforms without prebuilt wheels (e.g., Apple Silicon — closes #25).
#
dependencies = [
    "numpy>=2.0,<3.0",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "numba>=0.60",
    "pillow>=8.0.0",
]

[project.optional-dependencies]
# Pin-only minimal install (kept for backwards compatibility — same set
# as default ``dependencies`` plus pybullet for users coming from the
# pre-1.3.2 install instructions).
minimal = [
    "numpy>=2.0,<3.0",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "numba>=0.60",
    "pybullet>=3.2.5,<4.0",
]

# Feature groups (1.3.2 — heavy deps moved here).
# ultralytics floor pinned at 8.4.0: newer releases are compatible with
# the NumPy 2.x runtime range used by ManipulaPy.
simulation = ["pybullet>=3.2.5,<4.0"]
urdf = ["trimesh>=3.9.14"]
vision = [
    "opencv-python>=4.5",
    "ultralytics>=8.4.0",
    "torch>=1.8.0",
]
ml = ["torch>=1.8.0", "scikit-learn>=1.0"]
# Default GPU extra targets CUDA 12.x — that's what Ubuntu 22.04 ships
# with current NVIDIA apt repos (driver 525+), what the [cuda] section
# of our docs assumes, and what the v1.3.2 patch was validated against
# on driver 580. Pinned to the 13.x series because CuPy 14.x raised its
# floor to numpy 2.2+ and broke transitive resolver chains with
# ultralytics. Use [gpu-cuda11] for legacy CUDA 11.x systems.
cuda = ["cupy-cuda12x>=13.0,<14.0; sys_platform != 'darwin'"]

# Convenience: install everything (no self-references — the resolver
# handles direct deps more reliably than ``ManipulaPy[simulation,...]``).
all = [
    "pybullet>=3.2.5,<4.0",
    "trimesh>=3.9.14",
    "opencv-python>=4.5",
    "ultralytics>=8.4.0",
    "torch>=1.8.0",
    "scikit-learn>=1.0",
    "cupy-cuda12x>=13.0,<14.0; sys_platform != 'darwin'",
]

# Alternative GPU options for legacy CUDA versions and AMD/PyCUDA paths.
gpu-cuda11 = ["cupy-cuda11x>=13.0,<14.0; sys_platform != 'darwin'"]
gpu-cuda12 = ["cupy-cuda12x>=13.0,<14.0; sys_platform != 'darwin'"]
gpu-rocm = ["cupy-rocm-4-3>=10.0.0"]
gpu-pycuda = ["pycuda>=2021.1"]

# Vision for headless environments (CI-friendly)
vision-headless = [
    "opencv-python-headless>=4.5",
    "ultralytics>=8.4.0",
    "pillow>=8.0.0",
]

# Development and testing dependencies
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.6.0",
    "pytest-xvfb>=2.0.0",
    "pytest-timeout>=2.1.0",
    "pytest-benchmark>=4.0.0",
    "coverage[toml]>=6.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "pre-commit>=2.15.0",
    "tox>=4.0.0",
]

# Documentation dependencies
docs = [
    "sphinx>=8.0.0,<9.0.0",
    "pydata-sphinx-theme>=0.18.0,<0.20.0",
    "sphinx-rtd-theme>=3.0.0,<4.0.0",
    "myst-parser>=4.0.0,<5.0.0",
    "sphinx-autodoc-typehints>=3.0.0,<4.0.0",
    "nbsphinx>=0.8.0",
    "jupyter>=1.0.0",
]

# CI-specific dependencies
ci = [
    "pytest>=6.0.0",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.6.0",
    "pytest-xvfb>=2.0.0",
    "pytest-timeout>=2.1.0",
    "coverage[toml]>=6.0.0",
    "opencv-python-headless>=4.5",
    "tomli>=1.2.0;python_version<'3.11'",
]

# Testing combinations - now reference the main package since it includes everything
test-minimal = ["ManipulaPy[minimal,dev]"]
test-full = ["ManipulaPy[dev]"]  # Main package already includes everything
test-ci = ["ManipulaPy[ci,vision-headless]"]

[project.urls]
Homepage = "https://github.com/boelnasr/ManipulaPy"
Documentation = "https://manipulapy.readthedocs.io/"
Repository = "https://github.com/boelnasr/ManipulaPy.git"
"Bug Tracker" = "https://github.com/boelnasr/ManipulaPy/issues"
"Changelog" = "https://github.com/boelnasr/ManipulaPy/blob/main/CHANGELOG.md"
"Funding" = "https://github.com/sponsors/boelnasr"

# ------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["."]
include = ["ManipulaPy*"]
exclude = ["ManipulaPy.ManipulaPy_data._source*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
# Optional: make version dynamic if you have a _version.py file
# version = {attr = "ManipulaPy._version.__version__"}

[tool.setuptools.package-data]
"ManipulaPy" = [
    "*.yml",
    "*.yaml",
    "*.json",
    "*.urdf",
    "py.typed",
]
# Include URDF files from all robot directories (NOT mesh files - too large)
"ManipulaPy.ManipulaPy_data" = ["*.md", "*.urdf", "*.yaml", "*.json"]
"ManipulaPy.ManipulaPy_data.abb" = ["*.urdf"]
"ManipulaPy.ManipulaPy_data.fanuc" = ["*.urdf"]
"ManipulaPy.ManipulaPy_data.fanuc_crx" = ["*.urdf"]
"ManipulaPy.ManipulaPy_data.franka_panda" = ["*.urdf"]
"ManipulaPy.ManipulaPy_data.kinova" = ["*.urdf"]
"ManipulaPy.ManipulaPy_data.kinova.gen3" = ["*.urdf"]
"ManipulaPy.ManipulaPy_data.kinova.jaco" = ["*.urdf"]
"ManipulaPy.ManipulaPy_data.kuka_iiwa" = ["*.urdf"]
"ManipulaPy.ManipulaPy_data.kuka_iiwa.iiwa7" = ["*.urdf"]
"ManipulaPy.ManipulaPy_data.kuka_iiwa.iiwa14" = ["*.urdf"]
"ManipulaPy.ManipulaPy_data.robotiq" = ["*.urdf"]
"ManipulaPy.ManipulaPy_data.universal_robots" = ["*.urdf"]
"ManipulaPy.ManipulaPy_data.universal_robots.ur3" = ["*.urdf"]
"ManipulaPy.ManipulaPy_data.universal_robots.ur5" = ["*.urdf"]
"ManipulaPy.ManipulaPy_data.universal_robots.ur10" = ["*.urdf"]
"ManipulaPy.ManipulaPy_data.universal_robots.ur3e" = ["*.urdf"]
"ManipulaPy.ManipulaPy_data.universal_robots.ur5e" = ["*.urdf"]
"ManipulaPy.ManipulaPy_data.universal_robots.ur10e" = ["*.urdf"]
"ManipulaPy.ManipulaPy_data.universal_robots.ur16e" = ["*.urdf"]
"ManipulaPy.ManipulaPy_data.xarm" = ["*.urdf"]
"ManipulaPy.ManipulaPy_data.ur5" = ["*.py"]

[tool.setuptools.package-dir]
"" = "."

# ------------------------------------------------------------------
# Entry points (if you have CLI tools)
# [project.scripts]
# manipulapy = "ManipulaPy.cli:main"

# [project.gui-scripts]
# manipulapy-gui = "ManipulaPy.gui:main"

# ==================================================================================
# TESTING CONFIGURATION
# ==================================================================================

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"] 
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--maxfail=10",
    "--disable-warnings",
    "-v",
    "--durations=10",  # Show 10 slowest tests
]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "cuda: marks tests as requiring GPU/CUDA (will skip if not available)",
    "gpu: alias for cuda marker",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "vision: marks tests requiring vision dependencies (OpenCV, YOLO)",
    "simulation: marks tests requiring simulation dependencies (PyBullet)",
    "ml: marks tests requiring machine learning dependencies",
    "network: marks tests requiring network access",
    "benchmark: marks tests as benchmarks",
    "parametrize: marks parametrized tests",
    "functional: marks functional tests",
]

filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:.*CUDA.*:UserWarning",
    "ignore:.*cupy.*:UserWarning", 
    "ignore:.*numba.*:UserWarning",
    "ignore:.*OpenGL.*:UserWarning",
    "ignore:.*PyBullet.*:UserWarning",
    "ignore:.*torch.*:UserWarning",
    "ignore:.*matplotlib.*:UserWarning",
    "ignore::RuntimeWarning:numba.*",
    "ignore::FutureWarning:torch.*",
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore:.*pkg_resources.*:DeprecationWarning",
]

timeout = 300
timeout_method = "thread"
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Pytest collection configuration

# Use norecursedirs instead of collect_ignore for directories
norecursedirs = [
    "build",
    "dist", 
    ".eggs",
    "*.egg-info",
    ".git",
    ".tox",
    ".pytest_cache",
    "__pycache__",
    "Examples*",
    "Benchmark*", 
    "benchmark_results*",
    "paper",
    "figures",
    "docs",
    "venv*",
    "htmlcov",
    ".mypy_cache",
    "node_modules",
]

# ==================================================================================
# COVERAGE CONFIGURATION
# ==================================================================================

[tool.coverage.run]
source = ["ManipulaPy"]
branch = true
parallel = true
context = "${COVERAGE_CONTEXT}"
omit = [
    "*/tests/*",
    "*/test_*", 
    "*/*test*.py",
    "*/Examples/*",
    "*/Examples_old_backup_*/*",
    "*/Benchmark/*",
    "*/benchmark_results/*",
    "*/docs/*",
    "*/__pycache__/*",
    "*/build/*",
    "*/dist/*",
    "*/_version.py",
    "setup.py",
    "*/ManipulaPy_data/*",
    "*/venv*/*",
    "*/env/*",
    "*/.venv/*",
    "*/paper/*",
    "*/figures/*",
    "*/.pytest_cache/*",
    "*/.mypy_cache/*",
]

[tool.coverage.paths]
source = [
    "ManipulaPy/",
    "*/site-packages/ManipulaPy/",
    "*/lib/python*/site-packages/ManipulaPy/",
    "*/lib/python*/dist-packages/ManipulaPy/",
]

[tool.coverage.report]
show_missing = true
precision = 1
skip_covered = false
skip_empty = false
sort = "Cover"

exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError", 
    "raise RuntimeError",
    "raise ValueError",
    "if 0:",
    "if False:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if not CUDA_AVAILABLE:",
    "if not CUPY_AVAILABLE:",
    "except ImportError:",
    "except ModuleNotFoundError:",
    "cuda\\..*",
    "cupy\\..*",
    "CUDA not available",
    "GPU not available",
    "RuntimeError.*CUDA.*",
    "if not OPENCV_AVAILABLE:",
    "if not PYBULLET_AVAILABLE:",
    "if not YOLO_AVAILABLE:",
    "OpenCV not available",
    "PyBullet not available", 
    "YOLO not available",
    "ultralytics.*",
    "if sys\\.platform",
    "if platform\\.system",
    "@abstractmethod",
    "@abc\\.abstractmethod",
    "class .*\\bProtocol\\):",
    "except.*Exception",
    "except.*Error",
    "except.*Warning",
    "def __del__",
    "try:.*finally:",
    "raise NotImplementedError",
    "return NotImplemented",
    "TYPE_CHECKING",
    "\\.\\.\\.",  # Ellipsis in type stubs
]

[tool.coverage.html]
directory = "htmlcov"
title = "ManipulaPy Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"

# ==================================================================================
# CODE QUALITY TOOLS
# ==================================================================================

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = "\\.pyi?$"
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
  | ManipulaPy_data
  | Examples
  | Examples_old_backup_.*
  | Benchmark
  | benchmark_results
  | paper
  | figures
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["ManipulaPy"]
known_third_party = [
    "numpy",
    "scipy",
    "matplotlib",
    "cv2",
    "pybullet",
    "torch",
    "numba", 
    "cupy",
    "ultralytics",
    "sklearn",
    "trimesh",
    "PIL",
    "pytest",
]
skip_glob = [
    "ManipulaPy_data/*",
    "build/*",
    "dist/*",
    "Examples/*",
    "Examples_old_backup_*/*",
    "Benchmark/*",
    "benchmark_results/*",
    "paper/*",
    "figures/*",
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
pretty = true
show_column_numbers = true
show_error_context = true

[[tool.mypy.overrides]]
module = [
    "pybullet.*",
    "ultralytics.*",
    "cupy.*",
    "numba.*",
    "cv2.*",
    "matplotlib.*",
    "scipy.*",
    "trimesh.*",
    "pycuda.*",
    "PIL.*",
    "sklearn.*",
    "torch.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B904",  # raise ... from err
]
unfixable = [
    "B",  # Avoid fixing flake8-bugbear violations
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["B011", "S101"]
"**/conftest.py" = ["F401", "F403"]

[tool.ruff.mccabe]
max-complexity = 15

[tool.bandit]
exclude_dirs = [
    "tests",
    "Examples", 
    "Examples_old_backup_*",
    "Benchmark",
    "benchmark_results",
]
skips = ["B101", "B601", "B602"]

[tool.bandit.assert_used]
skips = ["**/test_*.py", "**/tests/*.py"]

# ==================================================================================
# ADDITIONAL TOOLS
# ==================================================================================

[tool.vulture]
min_confidence = 80
paths = ["ManipulaPy"]
exclude = ["ManipulaPy_data/"]

[tool.docformatter]
make-summary-multi-line = false
close-quotes-on-newline = true
wrap-summaries = 88
wrap-descriptions = 88

# ==================================================================================
# TOX CONFIGURATION (for multi-environment testing)
# ==================================================================================

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py39,py310,py311,py312,coverage,docs,lint

[testenv]
extras = 
commands = pytest {posargs}
setenv =
    SKIP_CUDA_TESTS = true
    SKIP_VISION_TESTS = true  
    SKIP_SIMULATION_TESTS = true

[testenv:coverage]
extras = 
commands = 
    pytest --cov=ManipulaPy --cov-report=html --cov-report=xml

[testenv:docs]
extras = docs
commands = sphinx-build -b html docs docs/_build/html

[testenv:lint]
extras = dev
commands = 
    black --check ManipulaPy/
    isort --check-only ManipulaPy/
    flake8 ManipulaPy/
    mypy ManipulaPy/
"""
